--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <p>Home</p>
     </div>
 
-    <div class="smallCard" onclick="window.location.href='products.?cat=electronics'">
+    <div class="smallCard" onclick="window.location.href='products.html?cat=electronics'">
       <img src="images/menuIcon6.webp" alt="Electronics" class="card">
       <p>Electronics</p>
     </div>
@@ -138,25 +138,25 @@
     <div class="item">
       <img src="images/cloth1.webp" alt="cloth1" class="itemImg">
       <p class="itemDescription">Men's T-shirt</p>
-      <p class="buyNowText">Buy Now</p>
+      <p  onclick="window.location.href='products.html?cat=fashion'" class="buyNowText">Buy Now</p>
     </div>
 
     <div class="item">
       <img src="images/cloth2.webp" alt="cloth2" class="itemImg">
       <p class="itemDescription">Jackets</p>
-      <p class="buyNowText">Buy Now</p>
+      <p class="buyNowText" onclick="window.location.href='products.html?cat=fashion'">Buy Now</p>
     </div>
 
     <div class="item">
       <img src="images/cloth3.webp" alt="cloth3" class="itemImg">
       <p class="itemDescription">Men's Trackshut</p>
-      <p class="buyNowText">Buy Now</p>
+      <p class="buyNowText" onclick="window.location.href='products.html?cat=fashion'">Buy Now</p>
     </div>
 
     <div class="item">
       <img src="images/cloth4.webp" alt="cloth4" class="itemImg">
       <p class="itemDescription">Jackets</p>
-      <p class="buyNowText">Buy Now</p>
+      <p class="buyNowText" onclick="window.location.href='products.html?cat=fashion'" >Buy Now</p>
     </div>
 
   </div>
@@ -171,7 +171,7 @@
         <p>Best of Electronics</p>
       </div>
 
-      <div class="viewAllSection" onclick="window.location.href='products.?cat=electronics'">
+      <div class="viewAllSection" onclick="window.location.href='products.html?cat=electronics'">
         <div class="viewAllButton">
           <p class="viewAllText">VIEW ALL</p>
         </div>
@@ -181,7 +181,7 @@
     <div class="item">
       <img src="images/electronic1.webp" alt="electronic img" class="itemImg">
       <p class="itemDescription">Camera</p>
-      <p class="buyNowText" onclick="window.location.href='products.html?cat=electronics'">Buy Now</p >
+      <p onclick="window.location.href='products.html?cat=electronics'" class="buyNowText">Buy Now</p >
     </div>
 
     <div class="item">
