--- a/index2.html
+++ b/index2.html
@@ -41,7 +41,6 @@
           <i class="fa-solid fa-magnifying-glass"></i>
         </div>
       </div>
-
       <div class="becomeSellerBox">
         <p>Become a Seller</p>
       </div>
@@ -390,3 +389,7 @@
 </body>
 
 </html>  
+
+<script src="script.js">
+
+</script>
