--- a/products.html
+++ b/products.html
@@ -23,9 +23,8 @@
                 </div>
             </div>
             <div class="nav-links">
-                <p>Become a Seller</p>
-                <p>More</p>
-                <p>Cart 🛒</p>
+                <p onclick="alertf()">More</p >
+                <p onclick="alertf()">Cart 🛒</p >
             </div>
         </div>
     </header>
