--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
       </div>
 
       <div class="searchBox">
-        <input class="input" type="text" placeholder="Search for products, brands and more" />
-
-        <div class="search-logo">
+        <input class="input" type="text" id="searchInput" placeholder="Search for products, brands and more" onkeydown="handleSearch(event)"/>
+        <div class="search-logo" onclick="redirectToSearch()">
           <i class="fa-solid fa-magnifying-glass"></i>
         </div>
       </div>
@@ -45,16 +44,16 @@
       <div class="loginBox" >
         <div class="login" onclick="loginpage()">Login</div>
       </div>
-
-      <div class="becomeSellerBox">
+      <div class="becomeSellerBox" onclick="seller()">
+      
         <p>Become a Seller</p>
       </div>
 
-      <div class="moreBox">
+      <div class="moreBox" onclick="alertf()">
         <p>More</p>
       </div>
 
-      <div class="cartBox">
+      <div class="cartBox"  onclick="alertf()">
         <i class="fa-solid fa-cart-shopping"></i>
         Cart
       </div>
@@ -187,19 +186,19 @@
     <div class="item">
       <img src="images/electronic2.webp" alt="electronic img" class="itemImg">
       <p class="itemDescription">Smart Watches</p>
-      <p class="buyNowText" onclick="window.location.href='products.?cat=electronics'">Buy Now</p>
+      <p class="buyNowText" onclick="window.location.href='products.html?cat=electronics'">Buy Now</p>
     </div>
 
     <div class="item">
       <img src="images/electronic3.webp" alt="electronic img" class="itemImg">
       <p class="itemDescription">TV</p>
-      <p class="buyNowText">Buy Now</p onclick="window.location.href='products.?cat=electronics'">
+      <p class="buyNowText">Buy Now</p onclick="window.location.href='products.html?cat=electronics'">
     </div>
 
     <div class="item">
       <img src="images/electronic4.webp" alt="electronic img" class="itemImg">
       <p class="itemDescription">trimmer</p>
-      <p class="buyNowText">Buy Now</p onclick="window.location.href='products.?cat=electronics'">
+      <p class="buyNowText">Buy Now</p onclick="window.location.href='products.html?cat=electronics'">
     </div>
 
   </div>
@@ -215,7 +214,7 @@
 
       <div class="viewAllSection">
         <div class="viewAllButton">
-          <p class="viewAllText">VIEW ALL</p>
+          <p class="viewAllText" onclick="window.location.href='products.html?cat=fashion'">VIEW ALL</p>
         </div>
       </div>
     </div>
@@ -223,25 +222,25 @@
     <div class="item">
       <img src="images/fashion1.webp" alt="cloth1" class="itemImg">
       <p class="itemDescription">Lahenga Choli & Gown</p>
-      <p class="buyNowText">Buy Now</p>
+      <p class="buyNowText" onclick="window.location.href='products.html?cat=fashion'">Buy Now</p>
     </div>
 
     <div class="item">
       <img src="images/fashion2.webp" alt="cloth2" class="itemImg">
       <p class="itemDescription">Kurtas</p>
-      <p class="buyNowText">Buy Now</p>
+      <p class="buyNowText" onclick="window.location.href='products.html?cat=fashion'">Buy Now</p>
     </div>
 
     <div class="item">
       <img src="images/fashion3.webp" alt="cloth3" class="itemImg">
       <p class="itemDescription">Liwas</p>
-      <p class="buyNowText">Buy Now</p>
+      <p class="buyNowText" onclick="window.location.href='products.html?cat=fashion'">Buy Now</p>
     </div>
 
     <div class="item">
       <img src="images/fashion4.webp" alt="cloth4" class="itemImg">
       <p class="itemDescription">Kurta Set</p>
-      <p class="buyNowText">Buy Now</p>
+      <p class="buyNowText" onclick="window.location.href='products.html?cat=fashion'">Buy Now</p>
     </div>
 
   </div>
@@ -257,7 +256,7 @@
 
       <div class="viewAllSection">
         <div class="viewAllButton">
-          <p class="viewAllText">VIEW ALL</p>
+          <p class="viewAllText" onclick="window.location.href='products.html?cat='">VIEW ALL</p>
         </div>
       </div>
     </div>
@@ -265,25 +264,25 @@
     <div class="item">
       <img src="images/topDeal1.webp" alt="topDeal" class="itemImg">
       <p class="itemDescription">Musical Instrument</p>
-      <p class="buyNowText">Buy Now</p>
+      <p class="buyNowText" onclick="window.location.href='products.html?cat='">Buy Now</p>
     </div>
 
     <div class="item">
       <img src="images/topDeal2.webp" alt="topDeal" class="itemImg">
       <p class="itemDescription">Smart Watches</p>
-      <p class="buyNowText">Buy Now</p>
+      <p class="buyNowText" onclick="window.location.href='products.html?cat='">Buy Now</p>
     </div>
 
     <div class="item">
       <img src="images/topDeal3.webp" alt="topDeal" class="itemImg">
       <p class="itemDescription">Umbrella</p>
-      <p class="buyNowText">Buy Now</p>
+      <p class="buyNowText" onclick="window.location.href='products.html?cat='">Buy Now</p>
     </div>
 
     <div class="item">
       <img src="images/topDeal4.webp" alt="topDeal" class="itemImg">
       <p class="itemDescription">Soft Toys</p>
-      <p class="buyNowText">Buy Now</p>
+      <p class="buyNowText" onclick="window.location.href='products.html?cat='">Buy Now</p>
     </div>
   </div>
 
@@ -383,7 +382,7 @@
       <span><i class="fa-solid fa-star" style="color: #ffe500;"></i> Advertise</span>
       <span><i class="fa-solid fa-gift" style="color: #ffe500;"></i> Gift Cards</span>
       <span><i class="fa-solid fa-circle-question" style="color: #ffe500;"></i> Help Center</span>
-      <span>© 2007-2023 Flipkart.com</span>
+      <span>© 2007-2025 Flipkart.com</span>
       <span><img src="images/payment-method.svg" alt="payment-method"></span>
 
     </div>
