--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
             background-color: #f1f3f6;
         }
         .login-container {
@@ -19,7 +20,7 @@
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
-            width: 300px;
+            width: 320px;
         }
         .login-container img {
             width: 150px;
@@ -31,6 +32,7 @@
             margin: 10px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
+            box-sizing: border-box;
         }
         .login-container button {
             width: 100%;
@@ -41,14 +43,28 @@
             border-radius: 5px;
             font-size: 16px;
             cursor: pointer;
+            transition: background-color 0.3s;
         }
         .login-container button:hover {
             background-color: #e55b12;
         }
+        .error-message {
+            color: red;
+            font-size: 14px;
+        }
     </style>
     <script>
         function login() {
-            // Simulate login success
+            const emailOrMobile = document.getElementById('emailOrMobile').value;
+            const password = document.getElementById('password').value;
+            const errorMessage = document.getElementById('error-message');
+
+            if (!emailOrMobile || !password) {
+                errorMessage.textContent = 'Please fill in both fields.';
+                return;
+            }
+
+            // Simulate successful login
             window.location.href = 'index2.html';
         }
     </script>
@@ -57,8 +73,9 @@
     <div class="login-container">
         <img src="log.webp" alt="Flipkart Logo">
         <h2>Login to Flipkart</h2>
-        <input type="text" placeholder="Enter Email/Mobile">
-        <input type="password" placeholder="Enter Password">
+        <input type="text" id="emailOrMobile" placeholder="Enter Email/Mobile" name="emailOrMobile" required>
+        <input type="password" id="password" placeholder="Enter Password" name="password" required>
+        <p id="error-message" class="error-message"></p>
         <button onclick="login()">Login</button>
     </div>
 </body>
